[tool.poetry]
name = "selfhealing-action-express"
version = "0.1.0"
description = ""
authors = ["Taylor D. Edmiston <tedmiston@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.130"
openai = "^0.27.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
